# taskbar

./: index.html  package-lock.json  package.json  setup-macos.sh  tailwind.config.ts  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  events.rs  lib.rs  macos.rs  main.rs  widgets.rs
src/components/: AppIcon.tsx  AppLauncher.tsx  ClockWidget.tsx  ContextMenu.tsx  QuickSettings.tsx  SystemTray.tsx  Taskbar.tsx
src/hooks/: useApps.ts  useMonitors.ts  useWidgets.ts
src/styles/: globals.css
src/types/: index.ts
